--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="navbar-nav" >
         <a class="nav-item nav-link" style="margin: 1%;" href="index.html">Home<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" style=" margin: 1%;" href="research.html">Research</a>
-        <a class="nav-item nav-link" style=" margin: 1%;" href="teaching.html">Teaching</a>
-        <a class="nav-item nav-link" style=" margin: 1%;" href="group.html">Group</a>                    
-        <a class="nav-item nav-link" style=" margin: 1%;" href="projects.html">Projects</a>
+        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="teaching.html">Teaching</a> -->
+        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="group.html">Group</a>                     -->
+        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="projects.html">Projects</a> -->
         <a class="nav-item nav-link" style=" margin: 1%;" href="services.html">Services</a>                  
 <!--         <a class="nav-item nav-link" style=" margin: 1%;" href="news.html">News</a> -->
       </div>
@@ -61,8 +61,8 @@
         </div>
         <div class="col mb-4">
             <div class="card">
-            <img src="images/teaching1.jpg" class="card-img-top" alt="...">
-            <a class="nav-link" href="teaching.html"> <h5 class="text-muted text-center" style="font-weight: lighter;">T E A C H I N G</h5> </a>
+            <img src="images/services.jpg" class="card-img-top" alt="...">
+            <a class="nav-link" href="services.html"> <h5 class="text-muted text-center" style="font-weight: lighter;">S E R V I C E S</h5> </a>
             </div>
         </div>
       </div>
