--- a/index.html
+++ b/index.html
@@ -1,85 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
 </head>
 
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
-<body class="container" style="background-color: whitesmoke; ">
+<body class="container" style="background-color: white;">
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: whitesmoke; font-size:large; font-family: 'Lora';  margin: 0%;">
-    <a class="navbar-brand" href="https://www.esf.edu/" target="_blank" ><img src="images/ESFlog.png" height="35" alt=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav" >
-        <a class="nav-item nav-link" style="margin: 1%;" href="index.html">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" style=" margin: 1%;" href="research.html">Research</a>
-        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="teaching.html">Teaching</a> -->
-        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="group.html">Group</a>                     -->
-        <!-- <a class="nav-item nav-link" style=" margin: 1%;" href="projects.html">Projects</a> -->
-        <a class="nav-item nav-link" style=" margin: 1%;" href="services.html">Services</a>                  
-<!--         <a class="nav-item nav-link" style=" margin: 1%;" href="news.html">News</a> -->
-      </div>
-    </div>
-  
+  <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="index.html">Home</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#research">Research</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="teaching.html">Teaching</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="group.html">Group</a>                    
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="projects.html">Projects</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="services.html">Services</a>                  
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="news.html">News</a>
   </nav>
 
-  <hr style="margin: 0%; border-width:medium;">  
-
-  <div style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: #4c4c4c;">
+  <div style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
     <center> 
-    <h1 style="width: 100%; font-family: 'Ubuntu';">MOAHAMAD RAZKENARI</h1> 
-    <p style=" font-family: 'Ubuntu';">I am an Assistant Professor of Construction Management at State University 
+      <h1 style="width: 100%;">MOAHAMAD RAZKENARI</h1> 
+      <p>I am an Assistant Professor of Construction Management at State University 
         of New York, College of Environmental Science and Forestry. My research focuses on
         sustainability in the built environment and construction process improvement 
         using industrialized construction. 
       ​</p>
+      <img src="images/about1.jpg" class="card-img-top" alt="...">
     </center> 
   </div>
 
-  <div class="row row-cols-1 row-cols-md-3  " style="margin: 5%; font-family: 'Ubuntu'; color: #4c4c4c; "> 
-            
-        <div class="col mb-4">
-            <div class="card">
-            <img src="images/about1.jpg" class="card-img-top" alt="...">
-            <a class="nav-link" href="group.html"><h5 class="text-muted text-center" style="font-weight: lighter;">A B O U T</h5> </a>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card">
-            <img src="images/research.jpg" class="card-img-top"  alt="...">
-            <a class="nav-link" href="research.html"><h5 class="text-muted text-center" style="font-weight: lighter;" >R E S E A R C H</h5></a>
-            </div>
-        </div>
-        <div class="col mb-4">
-            <div class="card">
-            <img src="images/services.jpg" class="card-img-top" alt="...">
-            <a class="nav-link" href="services.html"> <h5 class="text-muted text-center" style="font-weight: lighter;">S E R V I C E S</h5> </a>
-            </div>
-        </div>
-      </div>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
 
-  <!-- 
-      <div class="row row-cols-1 row-cols-md-3" style="font-family: 'Ubuntu'; color: #4c4c4c; margin:5%;"> 
-        <div class="col-md-7" style="height:33em; overflow: auto;">
-          <a id="middle" class="twitter-timeline" href="https://twitter.com/mrazkenari/timelines/1292835922069815297?ref_src=twsrc%5Etfw">Curated tweets by mrazkenari</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <div id="research" style="margin:3%; color: black;">
+    <h5 style=" font-family: 'Ubuntu';">
+        Research Projects ...
+      ​</h5>
+
+        <div class="card"  style="margin: 3%; color: black; ">
+          <div class="card-header"> Ongoing Research Projects</div>
+          <br>
+            <ul>
+              <li><a href="#projec_70" data-toggle="collapse" data-target="#collapse_70" aria-expanded="true" aria-controls="collapse_70"> Construction Safety Automation using Visual Sensing</a></li>               
+              <li><a href="#projec_60" data-toggle="collapse" data-target="#collapse_60" aria-expanded="true" aria-controls="collapse_60"> Developing interactive educational content in a stereoscopic 3D environment</a></li>               
+              <li><a href="#projec_50" data-toggle="collapse" data-target="#collapse_50" aria-expanded="true" aria-controls="collapse_50"> Real-time monitoring of human-building interactions in a 3D Virtual Reality environment</a></li>               
+            </ul>
         </div>
-    
-        <div class="col-md-5" id="side" style="height:33em;overflow: auto;">
-          <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-          <div class="elfsight-app-1297e250-f23d-4435-b133-84d16046318a"></div>
-        </div>
+
+        <div class="card" id="research" style="margin: 3%; color: black; ">
+            <div class="card-header"> Completed Research Projects</div>
+            <br>
+            <ul>
+              <li><a href="#projec_40" data-toggle="collapse" data-target="#collapse_40" aria-expanded="true" aria-controls="collapse_40"> Training for Manufactured Construction</a></li>                  
+              <li><a href="#projec_30" data-toggle="collapse" data-target="#collapse_30" aria-expanded="true" aria-controls="collapse_30" > Framework for Measuring Industrialized Construction Maturity</a></li>      
+              <li><a href="#projec_20" data-toggle="collapse" data-target="#collapse_20" aria-expanded="true" aria-controls="collapse_20"> Sustainability Evaluation of Infrastructure Projects</a></li>                     
+              <li><a href="#projec_10" data-toggle="collapse" data-target="#collapse_10" aria-expanded="true" aria-controls="collapse_10"> Key Elements of Net Zero Energy Buildings​</a></li>              
+            </ul>
       </div>
-    -->
-  
+      <br><br><br>
+      <br><br><br>
+
 </body>
 
 </html>
