--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 <body class="container" style="background-color: white;">
 
   <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="index.html">Home</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#index.html">Home</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#research">Research</a>
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="teaching.html">Teaching</a>
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="group.html">Group</a>                    
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="projects.html">Projects</a>
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="services.html">Services</a>                  
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="news.html">News</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#teaching.html">Teaching</a>
+      <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a>                   -->
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#news.html">News</a>
   </nav>
 
   <div style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
@@ -72,7 +70,43 @@
       </div>
       <br><br><br>
       <br><br><br>
-
+      <div style="margin:3%; color: #4c4c4c;">
+        <!-- <h1 style="width: 100%; font-family: 'Ubuntu';">MOAHAMAD RAZKENARI</h1>  -->
+        <h5 style=" font-family: 'Ubuntu';">
+            Teaching ...
+          ​</h5>
+        </div>
+    
+        <div class="card" id="research" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
+            <div class="card-header"> Courses at State University of New York</div>
+            <div class="accordion" id="accordionProject">
+                <div class="row no-gutters card-body" >
+                    <ul>
+                    <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020</a></li>
+                    <li> CME 453/653 - Construction Planning and Scheduling - Fall 2020, Fall 2019</a></li>
+                    <li> CME 215 - Sustainable Construction - Spring 2020</a></li>
+                    <li> CME 343/543 - Construction Estimating - Spring 2020</a></li>
+                    </ul> 
+                </div>
+            </div>
+        </div>
+    
+        <div class="card" id="research" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
+            <div class="card-header"> Courses at University of Florida </div>
+            <div class="accordion" id="accordionProject">
+                <div class="row no-gutters card-body" >
+                  <ul>
+                      <li> BCN4709 - Construction Project Management (TA) - Spring 2019, Fall 2018</a></li>
+                      <li> BCN6558 - Integrated Renewable Energy Systems (TA) - Fall 2018</a></li>
+                      <li> BCN6036 - Construction Research Methods (Instructor and TA) - Spring 2018, Fall 2018</a></li>
+                      <li> BCN4423 - Structures (TA) - Spring 2018, Fall 2017, Spring 2017, Fall 2016</a></li>
+                      <li> Online -Sustainable Construction (TA) - Spring 2017</a></li>
+                  </ul> 
+                </div>
+            </div>
+        </div>
+        <br><br><br>
+        <br><br><br>
 </body>
 
 </html>
