--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
 <body class="container" style="background-color: white;">
 
   <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#index.html">Home</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#index">Home</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#research">Research</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#teaching.html">Teaching</a>
       <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a>                   -->
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#news.html">News</a>
   </nav>
 
-  <div style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
+  <div id="index" style="margin:20%; margin-top: 3%; margin-bottom: 0%; color: black;">
     <center> 
+      <br><br><br><br>
       <h1 style="width: 100%;">MOAHAMAD RAZKENARI</h1> 
       <p>I am an Assistant Professor of Construction Management at State University 
         of New York, College of Environmental Science and Forestry. My research focuses on
@@ -41,20 +42,20 @@
 
   <br><br><br>
   <br><br><br>
-  <br><br><br>
 
   <div id="research" style="margin:3%; color: black;">
     <h5 style=" font-family: 'Ubuntu';">
-        Research Projects ...
+      <br><br><br><br>
+      Research Projects ...
       ​</h5>
 
         <div class="card"  style="margin: 3%; color: black; ">
           <div class="card-header"> Ongoing Research Projects</div>
           <br>
             <ul>
-              <li><a href="#projec_70" data-toggle="collapse" data-target="#collapse_70" aria-expanded="true" aria-controls="collapse_70"> Construction Safety Automation using Visual Sensing</a></li>               
-              <li><a href="#projec_60" data-toggle="collapse" data-target="#collapse_60" aria-expanded="true" aria-controls="collapse_60"> Developing interactive educational content in a stereoscopic 3D environment</a></li>               
-              <li><a href="#projec_50" data-toggle="collapse" data-target="#collapse_50" aria-expanded="true" aria-controls="collapse_50"> Real-time monitoring of human-building interactions in a 3D Virtual Reality environment</a></li>               
+              <li><a href="Project_070.html">Construction Safety Automation using Visual Sensing</a></li>               
+              <li><a href="Project_060.html"> Developing interactive educational content in a stereoscopic 3D environment</a></li>               
+              <li><a href="Project_050.html"> Real-time monitoring of human-building interactions in a 3D Virtual Reality environment</a></li>               
             </ul>
         </div>
 
@@ -62,10 +63,10 @@
             <div class="card-header"> Completed Research Projects</div>
             <br>
             <ul>
-              <li><a href="#projec_40" data-toggle="collapse" data-target="#collapse_40" aria-expanded="true" aria-controls="collapse_40"> Training for Manufactured Construction</a></li>                  
-              <li><a href="#projec_30" data-toggle="collapse" data-target="#collapse_30" aria-expanded="true" aria-controls="collapse_30" > Framework for Measuring Industrialized Construction Maturity</a></li>      
-              <li><a href="#projec_20" data-toggle="collapse" data-target="#collapse_20" aria-expanded="true" aria-controls="collapse_20"> Sustainability Evaluation of Infrastructure Projects</a></li>                     
-              <li><a href="#projec_10" data-toggle="collapse" data-target="#collapse_10" aria-expanded="true" aria-controls="collapse_10"> Key Elements of Net Zero Energy Buildings​</a></li>              
+              <li><a href="#project_040.html"> Training for Manufactured Construction</a></li>                  
+              <li><a href="#project_030.html"> Framework for Measuring Industrialized Construction Maturity</a></li>      
+              <li><a href="#project_020.html"> Sustainability Evaluation of Infrastructure Projects</a></li>                     
+              <li><a href="#project_010.html"> Key Elements of Net Zero Energy Buildings​</a></li>              
             </ul>
       </div>
       <br><br><br>
