--- a/index.html
+++ b/index.html
@@ -20,24 +20,27 @@
 <body class="container" style="background-color: white;">
 
   <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#index">Home</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="index.html">Home</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#research">Research</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#teaching.html">Teaching</a>
       <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a>                   -->
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#news.html">News</a>
   </nav>
 
-  <div id="index" style="margin:20%; margin-top: 3%; margin-bottom: 0%; color: black;">
-    <center> 
-      <br><br><br><br>
-      <h1 style="width: 100%;">MOAHAMAD RAZKENARI</h1> 
-      <p>I am an Assistant Professor of Construction Management at State University 
-        of New York, College of Environmental Science and Forestry. My research focuses on
-        sustainability in the built environment and construction process improvement 
-        using industrialized construction. 
+  <div id="index" style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
+      <center><h1 style="width: 100%;">MOAHAMAD RAZKENARI</h1></center>
+      <p>I am an Assistant Professor at SUNY College of Environmental Science and Forestry. 
+        My research focuses on applying Artificial Intelligence to improve construction process
+        and creating innovative solutions to reduce high level of carbon emissions in the built
+         environment. Some of my ongoing research projects are:
+        <ul>
+          <li>Creating scalable, affordable, and efficient solutions for building resiliency and energy retrofit</li>
+          <li>Applying artificial intelligence and advanced industrialized construction techniques to improve design and construction processes</li>
+          <li>Creating digital innovations towards circular built environment, including building deconstruction planning and automated deconstruction</li>         
+          <li>Implementing data-driven and computational design methods to improve environmental performance, energy efficiency, and comfort in the built environment</li>
+        </ul>
       ​</p>
       <img src="images/about1.jpg" class="card-img-top" alt="...">
-    </center> 
   </div>
 
   <br><br><br>
