--- a/index.html
+++ b/index.html
@@ -28,30 +28,18 @@
   </nav>
 
   <div id="index" style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
-      <center><h1 style="width: 100%;">MOAHAMAD RAZKENARI</h1></center>
-      <p>I am an Assistant Professor at SUNY College of Environmental Science and Forestry. 
-        My research focuses on applying Artificial Intelligence to improve construction process
-        and creating innovative solutions to reduce high level of carbon emissions in the built
-         environment. Some of my ongoing research projects are:
-        <ul>
-          <li>Creating scalable, affordable, and efficient solutions for building resiliency and energy retrofit</li>
-          <li>Applying artificial intelligence and advanced industrialized construction techniques to improve design and construction processes</li>
-          <li>Creating digital innovations towards circular built environment, including building deconstruction planning and automated deconstruction</li>         
-          <li>Implementing data-driven and computational design methods to improve environmental performance, energy efficiency, and comfort in the built environment</li>
-        </ul>
+      <center><h1 style="width: 100%; margin-bottom: 2%">MOAHAMAD RAZKENARI</h1></center>
+      <p style= "text-align: justify; margin-bottom: 2%">
+        I am an Assistant Professor at SUNY College of Environmental Science and Forestry. My research focuses on applying Artificial Intelligence to improve construction process and creating innovative solutions to reduce high level of carbon emissions in the built environment.
       ​</p>
       <img src="images/about1.jpg" class="card-img-top" alt="...">
   </div>
-
   <br><br><br>
-  <br><br><br>
-
   <div id="research" style="margin:3%; color: black;">
     <h5 style=" font-family: 'Ubuntu';">
       <br><br><br><br>
       Research Projects ...
       ​</h5>
-
         <div class="card"  style="margin: 3%; color: black; ">
           <div class="card-header"> Ongoing Research Projects</div>
           <br>
