--- a/index.html
+++ b/index.html
@@ -22,83 +22,77 @@
   <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="index.html">Home</a>
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#research">Research</a>
-      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#teaching.html">Teaching</a>
+      <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#teaching">Teaching</a>
       <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a>                   -->
       <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#news.html">News</a>
-  </nav>
+    </nav>
 
   <div id="index" style="margin:20%; margin-top: 7%; margin-bottom: 0%; color: black;">
       <center><h1 style="width: 100%; margin-bottom: 2%">MOAHAMAD RAZKENARI</h1></center>
       <p style= "text-align: justify; margin-bottom: 2%">
         I am an Assistant Professor at SUNY College of Environmental Science and Forestry. My research focuses on applying Artificial Intelligence to improve construction process and creating innovative solutions to reduce high level of carbon emissions in the built environment.
       ​</p>
-      <img src="images/about1.jpg" class="card-img-top" alt="...">
-  </div>
-  <br><br><br>
+      <div style="margin:10%;">
+        <img src="images/about1.jpg" class="card-img-top"  alt="...">
+      </div>
+    </div>
+
   <div id="research" style="margin:3%; color: black;">
     <h5 style=" font-family: 'Ubuntu';">
       <br><br><br><br>
       Research Projects ...
       ​</h5>
-        <div class="card"  style="margin: 3%; color: black; ">
-          <div class="card-header"> Ongoing Research Projects</div>
-          <br>
-            <ul>
-              <li><a href="Project_070.html">Construction Safety Automation using Visual Sensing</a></li>               
-              <li><a href="Project_060.html"> Developing interactive educational content in a stereoscopic 3D environment</a></li>               
-              <li><a href="Project_050.html"> Real-time monitoring of human-building interactions in a 3D Virtual Reality environment</a></li>               
-            </ul>
-        </div>
-
-        <div class="card" id="research" style="margin: 3%; color: black; ">
-            <div class="card-header"> Completed Research Projects</div>
-            <br>
-            <ul>
-              <li><a href="#project_040.html"> Training for Manufactured Construction</a></li>                  
-              <li><a href="#project_030.html"> Framework for Measuring Industrialized Construction Maturity</a></li>      
-              <li><a href="#project_020.html"> Sustainability Evaluation of Infrastructure Projects</a></li>                     
-              <li><a href="#project_010.html"> Key Elements of Net Zero Energy Buildings​</a></li>              
-            </ul>
+    <div class="card"  style="margin: 3%; color: #4c4c4c; ">
+      <div class="card-header"> Ongoing Research Projects</div>
+      <br>
+        <ul>
+          <li><a href="Project_070.html">Construction Safety Automation using Visual Sensing</a></li>               
+          <li><a href="Project_060.html"> Developing interactive educational content in a stereoscopic 3D environment</a></li>               
+          <li><a href="Project_050.html"> Real-time monitoring of human-building interactions in a 3D Virtual Reality environment</a></li>               
+        </ul>
       </div>
-      <br><br><br>
-      <br><br><br>
-      <div style="margin:3%; color: #4c4c4c;">
-        <!-- <h1 style="width: 100%; font-family: 'Ubuntu';">MOAHAMAD RAZKENARI</h1>  -->
-        <h5 style=" font-family: 'Ubuntu';">
-            Teaching ...
-          ​</h5>
-        </div>
-    
-        <div class="card" id="research" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
-            <div class="card-header"> Courses at State University of New York</div>
-            <div class="accordion" id="accordionProject">
-                <div class="row no-gutters card-body" >
-                    <ul>
-                    <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020</a></li>
-                    <li> CME 453/653 - Construction Planning and Scheduling - Fall 2020, Fall 2019</a></li>
-                    <li> CME 215 - Sustainable Construction - Spring 2020</a></li>
-                    <li> CME 343/543 - Construction Estimating - Spring 2020</a></li>
-                    </ul> 
-                </div>
-            </div>
-        </div>
-    
-        <div class="card" id="research" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
-            <div class="card-header"> Courses at University of Florida </div>
-            <div class="accordion" id="accordionProject">
-                <div class="row no-gutters card-body" >
-                  <ul>
-                      <li> BCN4709 - Construction Project Management (TA) - Spring 2019, Fall 2018</a></li>
-                      <li> BCN6558 - Integrated Renewable Energy Systems (TA) - Fall 2018</a></li>
-                      <li> BCN6036 - Construction Research Methods (Instructor and TA) - Spring 2018, Fall 2018</a></li>
-                      <li> BCN4423 - Structures (TA) - Spring 2018, Fall 2017, Spring 2017, Fall 2016</a></li>
-                      <li> Online -Sustainable Construction (TA) - Spring 2017</a></li>
-                  </ul> 
-                </div>
-            </div>
-        </div>
-        <br><br><br>
-        <br><br><br>
+
+    <div class="card" style="margin: 3%; color: #4c4c4c;">
+        <div class="card-header"> Completed Research Projects</div>
+        <br>
+        <ul>
+          <li><a href="#project_040.html"> Training for Manufactured Construction</a></li>                  
+          <li><a href="#project_030.html"> Framework for Measuring Industrialized Construction Maturity</a></li>      
+          <li><a href="#project_020.html"> Sustainability Evaluation of Infrastructure Projects</a></li>                     
+          <li><a href="#project_010.html"> Key Elements of Net Zero Energy Buildings​</a></li>              
+        </ul>
+      </div>
+
+    </div>
+
+  <div id="teaching" style="margin:3%; color: balck;">
+    <h5 style=" font-family: 'Ubuntu';">
+      <br><br><br><br>
+        Teaching ...
+      ​</h5>
+    <div class="card" style="margin: 3%; color: #4c4c4c; ">
+        <div class="card-header"> Courses at State University of New York</div>
+        <br>
+        <ul>
+          <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020</a></li>
+          <li> CME 453/653 - Construction Planning and Scheduling - Fall 2020, Fall 2019</a></li>
+          <li> CME 215 - Sustainable Construction - Spring 2020</a></li>
+          <li> CME 343/543 - Construction Estimating - Spring 2020</a></li>
+          </ul> 
+      </div>
+    <div class="card" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
+        <div class="card-header"> Courses at University of Florida </div>
+        <br>
+        <ul>
+            <li> BCN4709 - Construction Project Management (TA) - Spring 2019, Fall 2018</a></li>
+            <li> BCN6558 - Integrated Renewable Energy Systems (TA) - Fall 2018</a></li>
+            <li> BCN6036 - Construction Research Methods (Instructor and TA) - Spring 2018, Fall 2018</a></li>
+            <li> BCN4423 - Structures (TA) - Spring 2018, Fall 2017, Spring 2017, Fall 2016</a></li>
+            <li> Online -Sustainable Construction (TA) - Spring 2017</a></li>
+          </ul> 
+      </div>
+    </div>
+
 </body>
 
 </html>
