--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     </div>
 
-  <div id="teaching" style="margin:3%; color: balck;">
+  <div id="teaching" style="margin:3%; color: black">
     <h5 style=" font-family: 'Ubuntu';">
       <br><br><br><br>
         Teaching ...
@@ -74,10 +74,10 @@
         <div class="card-header"> Courses at State University of New York</div>
         <br>
         <ul>
-          <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020</a></li>
-          <li> CME 453/653 - Construction Planning and Scheduling - Fall 2020, Fall 2019</a></li>
-          <li> CME 215 - Sustainable Construction - Spring 2020</a></li>
-          <li> CME 343/543 - Construction Estimating - Spring 2020</a></li>
+          <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020, 2021</a></li>
+          <li> CME 453/653 - Construction Planning and Scheduling - Fall 2019, 2020, 2021</a></li>
+          <li> CME 215 - Sustainable Construction - Spring 2020, 2021, 2022</a></li>
+          <li> CME 343/543 - Construction Estimating - Spring 2020, 2021, 2022</a></li>
           </ul> 
       </div>
     <div class="card" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
