--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a>                   -->
   </nav>
 
-  <div id="index" class="row row-cols-1 row-cols-md-2" style="font-family: 'Ubuntu'; color: #4c4c4c;"> 
+  <div id="index" class="row row-cols-1 row-cols-md-2"> 
     <div class="col-md-9" style="transform: scale(0.85);">
       <center><h1 style="width: 100%; margin-bottom: 2%">MOAHAMAD RAZKENARI</h1></center>
       <p style= "text-align: justify; margin-bottom: 2%">
@@ -40,10 +40,7 @@
   </div>
 
   <div id="research" style="margin:3%; color: black;">
-    <h5 style=" font-family: 'Ubuntu';">
-      <br><br><br><br>
-      Research Projects ...
-    ​</h5>
+    <h5><br><br><br>Research Projects ...​</h5>
     <div class="card"  style="margin: 3%; color: #4c4c4c; ">
       <div class="card-header"> Ongoing Research Projects</div>
       <br>
@@ -68,21 +65,19 @@
     </div>
 
   <div id="teaching" style="margin:3%; color: black">
-    <h5 style=" font-family: 'Ubuntu';">
-      <br><br><br><br>
-        Teaching ...
-    </h5>
+    <h5><br><br><br>Teaching ...</h5>
     <div class="card" style="margin: 3%; color: #4c4c4c; ">
       <div class="card-header"> Courses at State University of New York</div>
       <br>
       <ul>
         <li> CME 255 - Plan Interpretation and Quantity Takeoff - Fall 2020, 2021</a></li>
-        <li> CME 453/653 - Construction Planning and Scheduling - Fall 2019, 2020, 2021</a></li>
         <li> CME 215 - Sustainable Construction - Spring 2020, 2021, 2022</a></li>
         <li> CME 343/543 - Construction Estimating - Spring 2020, 2021, 2022</a></li>
-        </ul> 
+        <li> CME 453/653 - Construction Planning and Scheduling - Fall 2019, 2020, 2021</a></li>
+        <li> SUS 400 - Analysis of Sustainable Systems - Online - Fall 2021 </li>
+      </ul> 
     </div>
-    <div class="card" style="margin: 3%; font-family: 'Ubuntu'; color: #4c4c4c; ">
+    <div class="card" style="margin: 3%; color: #4c4c4c; ">
       <div class="card-header"> Courses at University of Florida </div>
       <br>
       <ul>
@@ -90,13 +85,13 @@
           <li> BCN6558 - Integrated Renewable Energy Systems (TA) - Fall 2018</a></li>
           <li> BCN6036 - Construction Research Methods (Instructor and TA) - Spring 2018, Fall 2018</a></li>
           <li> BCN4423 - Structures (TA) - Spring 2018, Fall 2017, Spring 2017, Fall 2016</a></li>
-          <li> Online -Sustainable Construction (TA) - Spring 2017</a></li>
+          <li> Sustainable Construction (TA) - Online - Spring 2017</a></li>
       </ul> 
     </div>
   </div>
   
-  <br><br><br><br><br><br><br>
-
+  <br><br><br><br>
+  
 </body>
 
 </html>
