--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <img src="images/about1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/teaching.jpg" class="d-block w-100" alt="...">
+            <img src="images/teaching.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/about1.jpg" class="d-block w-100" alt="...">
+            <img src="images/research.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
        <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
