--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="transform: scale(0.9);">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/about1.jpg" class="d-block w-100" alt="...">
+            <img src="images/about.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="images/teaching.JPG" class="d-block w-100" alt="...">
