--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <img src="images/teaching.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/research.jpg" class="d-block w-100" alt="...">
+            <img src="images/EPio8WlWsAMpRzA.jpeg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/MohamadPhoto.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
        <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
