--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
   </nav>
 
   <div id="index" class="row row-cols-1 row-cols-md-2"> 
-    <div class="col-md-9" style="transform: scale(0.85);">
+    <div class="col-md-9" style="transform: scale(0.9);">
       <h1 class = "text-center" style="width: 100%; margin-bottom: 2%">MOAHAMAD RAZKENARI</h1>
       <p style= "text-align: justify; margin-bottom: 2%; ">
         I am an Assistant Professor at SUNY College of Environmental Science and Forestry. My research focuses on applying Artificial Intelligence to improve construction process and creating innovative solutions to reduce high level of carbon emissions in the built environment.
       ​</p>
       <!-- <img src="images/about1.jpg" class="card-img-top"  alt="..."> -->
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width:100%; max-height:600px !important; overflow: hidden; align-self: center; transform: scale(0.95);">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/about.jpg" class="d-block w-100" alt="...">
+            <img src="images/about.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="images/teaching.JPG" class="d-block w-100" alt="...">
@@ -55,7 +55,7 @@
         </button>
       </div>
     </div>
-    <div class="col-md-3 bg-white" style="height:40em; margin-top: 10%; overflow: auto;">
+    <div class="col-md-3 bg-white" style="height:40em; margin-top: 10%; overflow: auto; transform: scale(0.95);">
         <a class="twitter-timeline" href="https://twitter.com/mrazkenari/timelines/1292835922069815297?ref_src=twsrc%5Etfw">Tweets - Curated tweets by mrazkenari</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
