--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
     <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a> -->
   </nav>
 
-  <div id="index" class="row row-cols-1 row-cols-md-2"> 
-    <div class="col-md-9" style="transform: scale(0.9);">
-      <h1 class = "text-center" style="width: 100%; margin-bottom: 2%">MOAHAMAD RAZKENARI</h1>
-      <p style= "text-align: justify; margin-bottom: 2%; ">
-        I am an Assistant Professor at SUNY College of Environmental Science and Forestry. My research focuses on applying Artificial Intelligence to improve construction process and creating innovative solutions to reduce high level of carbon emissions in the built environment.
-      ​</p>
+  <div style="margin: 5%;">
+    <h1 class = "text-center" style="width: 100%; margin: 2%">MOAHAMAD RAZKENARI</h1>
+    <p style= "text-align: justify; margin: 5%;">
+      I am an Assistant Professor at SUNY College of Environmental Science and Forestry. My research focuses on applying Artificial Intelligence to improve construction process and creating innovative solutions to reduce high level of carbon emissions in the built environment.
+    </p>
+  </div>
+
+  <div id="index" class="row row-cols-1 row-cols-md-2" style="margin: 2%;"> 
+    <div class="col-md-9">
       <!-- <img src="images/about1.jpg" class="card-img-top"  alt="..."> -->
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width:100%; max-height:600px !important; overflow: hidden; align-self: center; transform: scale(0.95);">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width:100%; max-height:35em !important; overflow: hidden; align-self: center; transform: scale(0.9);">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/about.JPG" class="d-block w-100" alt="...">
@@ -55,10 +58,11 @@
         </button>
       </div>
     </div>
-    <div class="col-md-3 bg-white" style="height:40em; margin-top: 10%; overflow: auto; transform: scale(0.95);">
+    <div class="col-md-3 bg-white" style="height:35em; overflow: auto; transform: scale(0.9);">
         <a class="twitter-timeline" href="https://twitter.com/mrazkenari/timelines/1292835922069815297?ref_src=twsrc%5Etfw">Tweets - Curated tweets by mrazkenari</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
+  <br><br><br>
 
   <div id="research" style="margin:3%; margin-top: -5%; color: black;">
     <br><br><br>
