--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
+<nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
+  <div class="container-fluid">
+    <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="index.html">Home</a>
+        <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="#research">Research</a>
+        <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="#teaching">Teaching</a>
+      <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a> -->
+    </div>
+  </div>
+</nav>
+
 <body class="container bg-light">
-
-  <nav class="navbar sticky-top navbar-expand-lg bg-primary text-white rounded">
-    <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="index.html">Home</a>
-    <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="#research">Research</a>
-    <a class="nav-item nav-link text-light" style="margin-left: 2%; font-size: x-large ;" href="#teaching">Teaching</a>
-    <!-- <a class="nav-item nav-link" style="margin-left: 2%; color: white; font-size: x-large ;" href="#services.html">Services</a> -->
-  </nav>
-
   <div style="margin: 5%;">
     <h1 class = "text-center" style="width: 100%; margin: 2%">MOAHAMAD RAZKENARI</h1>
     <p style= "text-align: justify; margin: 5%;">
